@@ -1,3 +1,7 @@
+2005-03-20  Yann Hodique  <Yann.Hodique@lifl.fr>
+
+	* perso/tempo-c++.el: new macros for c++ "for iterator"
+
 2005-03-18  Yann Hodique  <Yann.Hodique@lifl.fr>
 
 	* perso/visual.el: use file-name-shadow-mode
